tests/reference/asr-test_bitwise_on_float-2e09b30.stderr
semantic error: Unsupported binary operation on floats: '<<'
 --> tests/errors/test_bitwise_on_float.py:8:11
  |
8 |     print(f1 << f2)
  |           ^^^^^^^^ 


Note: Please report unclear or confusing messages as bugs at
https://github.com/lcompilers/lpython/issues.
